feat: implementar registros CSV para inicio de sesión de usuarios